# climate-agent-news

./: .gitignore  README.md  app.js  index.html  pyproject.toml  run.ps1  styles.css
.github/workflows/: pages.yml
config/: editorial_overrides.json  keywords.yml  sources.master.json  unfccc_key_decisions.json  unfccc_summary_metrics.json
data/: climate.db  daily_brief.md  dashboard.json  demo_events.json  news_archive.json
docs/: CODEX_IMPLEMENTATION_PLAN.md  COMPLIANCE_CHECKLIST.md  PRODUCT_STRATEGY.md  SYSTEM_DESIGN.md
src/climate_agent/: __init__.py  archive.py  briefing.py  cli.py  collector.py  db.py  delivery.py  editorial.py  exporter.py  official_data.py  pipeline.py  providers.py  sync.py  translation.py  web.py
static/: app.js  index.html  styles.css
static/data/: daily_brief.md  dashboard.json  news_archive.json
tests/: test_core.py
