[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-text-lab"
version = "0.2.0"
description = "每日更新、来源可追溯的国际气候情报与高质量中文文本数据库"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
climate-brief = "climate_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
